# the-brownfield-cartographer

./: .env.example  .gitignore  README.md  RECONNAISSANCE.md  pyproject.toml
src/: cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  git_analyzer.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py  semantic_index.py
src/models/: __init__.py  edges.py  nodes.py
target-repos/airflow/.cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  meta.json  onboarding_brief.md
target-repos/jaffle_shop/.cartography/: cartography_trace.jsonl  combined_graph.json  lineage_graph.json  meta.json  module_graph.json
the-brownfield-cartographer/: RECONNAISSANCE.md
